[package]
name = "lib"
version = "0.1.0"
authors = ["Ruediger Klaehn <rklaehn@protonmail.com>"]
edition = "2018"

[dependencies]
quickcheck = { version = "0.9.2", optional = true }
rand = { version = "0.7.3", optional = true } 

[dev-dependencies]
quickcheck = "0.9.2"
rand = "0.7.3"

[features]
test = ["quickcheck", "rand"]