[package]
name = "main"
version = "0.1.0"
authors = ["Ruediger Klaehn <rklaehn@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }

[dev-dependencies]
lib = { path = "../lib", features = ["test"] }